tests/baselines/reference/esmModeDeclarationFileWithExportAssignment.errors.txt
main.mts(1,8): error TS1192: Module '"other"' has no default export.
other.d.mts(2,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.


==== other.d.mts (1 errors) ====
    declare function example(): 5;
    export = example;
    ~~~~~~~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
    
==== main.mts (1 errors) ====
    import example from "./other.mjs";
           ~~~~~~~
!!! error TS1192: Module '"other"' has no default export.
    example();